@@ -60,6 +60,8 @@ http://svn.edgewall.org/repos/babel/tags/1.0.0/
  * ensure .mo file header contains the same information as the source .po file 
    (#199)
  * added support for get_language_name() on the locale objects.
+ * added support for get_territory_name() on the locale objects.
+ * added support for get_script_name() on the locale objects.
 
 
 Version 0.9.6
